--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "email": "hi@sid.fyi"
   },
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 2000",
     "build": "next build",
     "analyze": "ANALYZE=true next build",
     "postbuild": "next-sitemap",
@@ -31,32 +31,32 @@
     "format": "prettier . --write"
   },
   "dependencies": {
-    "@next/bundle-analyzer": "^14.0.4",
+    "@next/bundle-analyzer": "^14.1.0",
     "@notionhq/client": "^2.2.14",
     "@vercel/kv": "^1.0.1",
-    "@vercel/speed-insights": "^1.0.2",
-    "framer-motion": "^10.16.16",
-    "next": "14.0.4",
+    "@vercel/speed-insights": "^1.0.7",
+    "framer-motion": "^11.0.3",
+    "next": "14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sharp": "^0.33.1",
+    "sharp": "^0.33.2",
     "swr": "^2.2.4"
   },
   "devDependencies": {
-    "@next/env": "^14.0.4",
-    "@types/node": "^20.10.5",
-    "@types/react": "^18.2.45",
-    "@typescript-eslint/eslint-plugin": "^6.16.0",
-    "@typescript-eslint/parser": "^6.16.0",
-    "autoprefixer": "^10.4.16",
+    "@next/env": "^14.1.0",
+    "@types/node": "^20.11.6",
+    "@types/react": "^18.2.48",
+    "@typescript-eslint/eslint-plugin": "^6.19.1",
+    "@typescript-eslint/parser": "^6.19.1",
+    "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
-    "eslint-config-next": "^14.0.4",
+    "eslint-config-next": "^14.1.0",
     "eslint-config-prettier": "^9.1.0",
     "next-sitemap": "^4.2.3",
-    "postcss": "^8.4.32",
-    "prettier": "^3.1.1",
-    "prettier-plugin-tailwindcss": "^0.5.9",
-    "tailwindcss": "^3.4.0",
+    "postcss": "^8.4.33",
+    "prettier": "^3.2.4",
+    "prettier-plugin-tailwindcss": "^0.5.11",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   },
   "packageManager": "yarn@4.0.2"
