--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "@notionhq/client": "^2.2.15",
     "@vercel/kv": "^1.0.1",
     "@vercel/speed-insights": "^1.0.10",
-    "framer-motion": "^11.0.28",
-    "next": "14.2.1",
+    "framer-motion": "^11.1.1",
+    "next": "^14.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sharp": "^0.33.3",
