--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
   },
   "scripts": {
     "dev": "next dev -p 2000",
+    "start": "next start -p 2000",
     "build": "next build",
     "analyze": "ANALYZE=true next build",
     "postbuild": "next-sitemap",
-    "start": "next start",
     "lint": "next lint",
     "type-check": "tsc --pretty --noEmit",
     "format": "prettier . --write"
