--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,6 @@
     "isolatedModules": true,
     "jsx": "preserve"
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/types/*.d.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/types/*.d.ts", "next.config.mjs"],
   "exclude": ["node_modules"]
 }
