--- a/package.json
+++ b/package.json
@@ -31,23 +31,23 @@
     "format": "prettier . --write"
   },
   "dependencies": {
-    "@next/bundle-analyzer": "^14.2.4",
     "@notionhq/client": "^2.2.15",
     "@vercel/kv": "^2.0.0",
     "@vercel/speed-insights": "^1.0.12",
-    "framer-motion": "^11.2.11",
+    "framer-motion": "^11.2.12",
     "next": "^14.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "sharp": "^0.33.4",
     "swr": "^2.2.5"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^14.2.4",
     "@next/env": "^14.2.4",
     "@types/node": "^20.14.8",
     "@types/react": "^18.3.3",
-    "@typescript-eslint/eslint-plugin": "^7.13.1",
-    "@typescript-eslint/parser": "^7.13.1",
+    "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^7.14.1",
+    "@typescript-eslint/parser": "^7.14.1",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.4",
@@ -59,5 +59,5 @@
     "tailwindcss": "^3.4.4",
     "typescript": "^5.5.2"
   },
-  "packageManager": "yarn@4.3.0"
+  "packageManager": "yarn@4.3.1"
 }
