--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,13 @@
 {
-  "extends": ["eslint:recommended", "next/core-web-vitals", "prettier"],
-  "overrides": [
-    {
-      "parserOptions": { "project": "./tsconfig.json" },
-      "files": ["*.ts", "*.tsx"],
-      "extends": [
-        "plugin:@typescript-eslint/strict-type-checked",
-        "plugin:@typescript-eslint/stylistic-type-checked"
-      ]
-    }
+  "parserOptions": {
+    "project": "./tsconfig.json"
+  },
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/strict-type-checked",
+    "plugin:@typescript-eslint/stylistic-type-checked",
+    "next/core-web-vitals",
+    "prettier"
   ],
   "rules": {
     "react/jsx-sort-props": [
