--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,13 @@
     "isolatedModules": true,
     "jsx": "preserve"
   },
-  "include": ["next-env.d.ts", "src/**/*.ts", "src/**/*.tsx", "src/**/*.d.ts", "next.config.mjs"],
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "src/**/*.d.ts",
+    "next-env.d.ts",
+    "tailwind.config.ts",
+    "next.config.mjs"
+  ],
   "exclude": ["node_modules"]
 }
