--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,5 +1,5 @@
 {
   "printWidth": 110,
   "tailwindFunctions": ["cn"],
-  "plugins": ["prettier-plugin-tailwindcss"]
+  "plugins": ["prettier-plugin-packagejson", "prettier-plugin-tailwindcss"]
 }
