--- a/package.json
+++ b/package.json
@@ -1,38 +1,36 @@
 {
   "name": "www.sid.fyi",
   "description": "A bit about sid.",
-  "homepage": "https://sid.fyi",
   "keywords": [
     "next.js",
     "tailwindcss"
   ],
-  "license": "MIT",
+  "homepage": "https://sid.fyi",
+  "bugs": {
+    "url": "https://github.com/shift4id/www.sid.fyi/issues",
+    "email": "hi@sid.fyi"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/shift4id/www.sid.fyi.git"
   },
+  "license": "MIT",
   "author": {
     "name": "Siddharth Adusumelli",
     "email": "hi@sid.fyi",
     "url": "https://sid.fyi"
   },
-  "bugs": {
-    "url": "https://github.com/shift4id/www.sid.fyi/issues",
-    "email": "hi@sid.fyi"
-  },
   "scripts": {
-    "dev": "next dev -p 2000",
-    "start": "next start -p 2000",
     "build": "next build",
-    "postbuild": "next-sitemap",
+    "dev": "next dev -p 2000",
+    "format": "prettier . --write",
     "lint": "next lint",
-    "format": "prettier . --write"
+    "start": "next start -p 2000"
   },
   "dependencies": {
     "@notionhq/client": "^2.2.15",
     "@vercel/kv": "^2.0.0",
     "@vercel/speed-insights": "^1.0.12",
-    "framer-motion": "^11.3.6",
     "next": "^14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -46,13 +44,14 @@
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.16.1",
     "@typescript-eslint/parser": "^7.16.1",
+    "@vercel/style-guide": "^6.0.0",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.5",
     "eslint-config-prettier": "^9.1.0",
-    "next-sitemap": "^4.2.3",
     "postcss": "^8.4.39",
     "prettier": "^3.3.3",
+    "prettier-plugin-packagejson": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "tailwindcss": "^3.4.6",
     "typescript": "^5.5.3"
