--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,12 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ]
   },
   "include": [
     "src/**/*.ts",
@@ -25,7 +30,8 @@
     "src/**/*.d.ts",
     "next-env.d.ts",
     "tailwind.config.ts",
-    "next.config.mjs"
+    "next.config.mjs",
+    ".next/types/**/*.ts"
   ],
   "exclude": ["node_modules"]
 }
