--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "@notionhq/client": "^2.2.15",
+    "@vercel/analytics": "^1.3.1",
     "@vercel/kv": "^2.0.0",
     "@vercel/speed-insights": "^1.0.12",
     "next": "^14.2.5",
