--- a/package.json
+++ b/package.json
@@ -40,16 +40,19 @@
   "devDependencies": {
     "@next/bundle-analyzer": "^14.2.5",
     "@next/env": "^14.2.5",
-    "@types/node": "^22.0.0",
+    "@next/eslint-plugin-next": "^14.2.5",
+    "@types/node": "^22.0.2",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
+    "@typescript-eslint/parser": "^8.0.0",
     "@vercel/style-guide": "^6.0.0",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.5",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
     "postcss": "^8.4.40",
     "prettier": "^3.3.3",
     "prettier-plugin-packagejson": "^2.5.1",
