--- a/package.json
+++ b/package.json
@@ -25,37 +25,30 @@
   },
   "dependencies": {
     "@notionhq/client": "^2.2.15",
-    "@vercel/analytics": "^1.3.1",
+    "@vercel/analytics": "^1.3.2",
     "@vercel/kv": "^3.0.0",
-    "@vercel/speed-insights": "^1.0.12",
-    "next": "^14.2.15",
+    "@vercel/speed-insights": "^1.0.14",
+    "axios": "^1.7.7",
+    "next": "^14.2.16",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "swr": "^2.2.5"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^14.2.15",
-    "@next/env": "^14.2.15",
-    "@next/eslint-plugin-next": "^14.2.15",
+    "@next/env": "^14.2.16",
+    "@next/eslint-plugin-next": "^14.2.16",
     "@types/eslint": "^8.56.12",
-    "@types/node": "^22.7.5",
-    "@types/react": "^18.3.11",
+    "@types/node": "^22.8.4",
+    "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "@typescript-eslint/eslint-plugin": "^8.8.1",
-    "@typescript-eslint/parser": "^8.8.1",
     "@vercel/style-guide": "^6.0.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.57.1",
-    "eslint-config-next": "^14.2.15",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-typescript": "^3.6.3",
-    "eslint-plugin-import": "^2.31.0",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
     "prettier-plugin-packagejson": "^2.5.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
-    "tailwindcss": "^3.4.13",
+    "tailwindcss": "^3.4.14",
     "typescript": "~5.5.4"
   },
-  "packageManager": "yarn@4.5.0"
+  "packageManager": "yarn@4.5.1"
 }
