--- a/package.json
+++ b/package.json
@@ -31,23 +31,24 @@
     "axios": "^1.7.9",
     "next": "^15.1.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwindcss": "^4.0.0"
   },
   "devDependencies": {
     "@next/env": "^15.1.6",
     "@next/eslint-plugin-next": "^15.1.6",
+    "@tailwindcss/postcss": "^4.0.0",
     "@types/eslint": "^8.56.12",
     "@types/node": "^22.10.7",
     "@types/react": "^19.0.7",
     "@types/react-dom": "^19.0.3",
     "@vercel/style-guide": "^6.0.0",
-    "autoprefixer": "^10.4.20",
     "eslint": "^8.57.1",
     "postcss": "^8.5.1",
+    "postcss-load-config": "^6.0.1",
     "prettier": "^3.4.2",
     "prettier-plugin-packagejson": "^2.5.8",
     "prettier-plugin-tailwindcss": "^0.6.10",
-    "tailwindcss": "^3.4.17",
     "typescript": "^5.7.3"
   },
   "packageManager": "yarn@4.6.0"
