chore: clean up code

--- a/package.json
+++ b/package.json
@@ -28,18 +28,16 @@
     "@vercel/analytics": "^1.4.1",
     "@vercel/kv": "^3.0.0",
     "@vercel/speed-insights": "^1.1.0",
-    "axios": "^1.7.9",
     "next": "^15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwindcss": "^4.0.0"
+    "tailwindcss": "^4.0.4"
   },
   "devDependencies": {
-    "@next/env": "^15.1.6",
-    "@next/eslint-plugin-next": "^15.1.6",
-    "@tailwindcss/postcss": "^4.0.0",
+    "@next/eslin-plugin-next": "^15.1.6",
+    "@tailwindcss/postcss": "^4.0.4",
     "@types/eslint": "^8.56.12",
-    "@types/node": "^22.12.0",
+    "@types/node": "^22.13.1",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vercel/style-guide": "^6.0.0",
