--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "tailwindcss": "^4.0.4"
   },
   "devDependencies": {
-    "@next/eslin-plugin-next": "^15.1.6",
+    "@next/eslint-plugin-next": "^15.1.6",
     "@tailwindcss/postcss": "^4.0.4",
     "@types/eslint": "^8.56.12",
     "@types/node": "^22.13.1",
