--- a/package.json
+++ b/package.json
@@ -24,24 +24,29 @@
     "start": "next start -p 2000"
   },
   "dependencies": {
-    "@notionhq/client": "^2.2.16",
+    "@notionhq/client": "^2.3.0",
     "@vercel/analytics": "^1.5.0",
     "@vercel/kv": "^3.0.0",
     "@vercel/speed-insights": "^1.2.0",
-    "next": "^15.2.1",
+    "next": "^15.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwindcss": "^4.0.10"
+    "tailwindcss": "^4.0.14"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^15.2.1",
-    "@tailwindcss/postcss": "^4.0.10",
-    "@types/eslint": "^8.56.12",
-    "@types/node": "^22.13.9",
+    "@antfu/eslint-config": "^4.10.1",
+    "@eslint-react/eslint-plugin": "^1.33.0",
+    "@next/eslint-plugin-next": "^15.2.2",
+    "@tailwindcss/postcss": "^4.0.14",
+    "@types/eslint": "^9.6.1",
+    "@types/node": "^22.13.10",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
-    "@vercel/style-guide": "^6.0.0",
-    "eslint": "^8.57.1",
+    "eslint": "^9.22.0",
+    "eslint-config-xo": "^0.46.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "jiti": "^2.4.2",
     "postcss": "^8.5.3",
     "postcss-load-config": "^6.0.1",
     "prettier": "^3.5.3",
