--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "scripts": {
     "build": "next build",
-    "dev": "next dev -p 2000",
+    "dev": "next dev -p 2000 --turbopack",
     "format": "prettier . --write",
     "lint": "next lint",
     "start": "next start -p 2000"
