--- a/package.json
+++ b/package.json
@@ -20,34 +20,35 @@
     "build": "next build",
     "dev": "next dev -p 2000 --turbopack",
     "format": "prettier . --write",
-    "lint": "next lint",
-    "start": "next start -p 2000"
+    "lint": "eslint . --fix",
+    "start": "next start -p 2000",
+    "type-check": "tsc --noEmit --pretty"
   },
   "dependencies": {
-    "@notionhq/client": "^3.1.3",
+    "@notionhq/client": "^4.0.1",
     "@vercel/analytics": "^1.5.0",
     "@vercel/kv": "^3.0.0",
     "@vercel/speed-insights": "^1.2.0",
-    "next": "^15.3.4",
+    "next": "^15.4.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^4.16.1",
-    "@eslint-react/eslint-plugin": "^1.52.2",
-    "@next/eslint-plugin-next": "^15.3.4",
+    "@antfu/eslint-config": "^4.17.0",
+    "@eslint-react/eslint-plugin": "^1.52.3",
+    "@next/eslint-plugin-next": "^15.4.1",
     "@tailwindcss/postcss": "^4.1.11",
-    "@types/node": "^24.0.6",
+    "@types/node": "^24.0.14",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
-    "eslint": "^9.30.0",
+    "eslint": "^9.31.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
-    "prettier-plugin-packagejson": "^2.5.17",
-    "prettier-plugin-tailwindcss": "^0.6.13",
+    "prettier-plugin-packagejson": "^2.5.18",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "typescript": "^5.8.3"
   },
   "packageManager": "yarn@4.9.2"
