--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
   "name": "www.sid.fyi",
+  "packageManager": "yarn@4.9.2",
   "description": "The source code for www.sid.fyi",
-  "homepage": "https://sid.fyi",
-  "bugs": {
-    "url": "https://github.com/shift4id/www.sid.fyi/issues",
-    "email": "hi@sid.fyi"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/shift4id/www.sid.fyi.git"
-  },
-  "license": "MIT",
   "author": {
     "name": "Siddharth Adusumelli",
     "email": "hi@sid.fyi",
     "url": "https://sid.fyi"
+  },
+  "license": "MIT",
+  "homepage": "https://sid.fyi",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/shift4id/www.sid.fyi.git"
+  },
+  "bugs": {
+    "url": "https://github.com/shift4id/www.sid.fyi/issues",
+    "email": "hi@sid.fyi"
   },
   "scripts": {
     "build": "next build",
@@ -29,17 +30,17 @@
     "@vercel/analytics": "^1.5.0",
     "@vercel/kv": "^3.0.0",
     "@vercel/speed-insights": "^1.2.0",
-    "next": "^15.4.1",
+    "next": "^15.4.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^4.17.0",
+    "@antfu/eslint-config": "^5.0.0",
     "@eslint-react/eslint-plugin": "^1.52.3",
-    "@next/eslint-plugin-next": "^15.4.1",
+    "@next/eslint-plugin-next": "^15.4.4",
     "@tailwindcss/postcss": "^4.1.11",
-    "@types/node": "^24.0.14",
+    "@types/node": "^24.1.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "eslint": "^9.31.0",
@@ -47,9 +48,8 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
-    "prettier-plugin-packagejson": "^2.5.18",
+    "prettier-plugin-packagejson": "^2.5.19",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "typescript": "^5.8.3"
-  },
-  "packageManager": "yarn@4.9.2"
+  }
 }
