--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# Created by https://www.toptal.com/developers/gitignore/api/node,yarn,macos,visualstudiocode
-# Edit at https://www.toptal.com/developers/gitignore?templates=node,yarn,macos,visualstudiocode
+# Created by https://www.toptal.com/developers/gitignore/api/node,macos,visualstudiocode
+# Edit at https://www.toptal.com/developers/gitignore?templates=node,macos,visualstudiocode
 
 ### macOS ###
 # General
@@ -193,21 +193,4 @@ dist
 .history
 .ionide
 
-### yarn ###
-# https://yarnpkg.com/getting-started/qa#which-files-should-be-gitignored
-
-.yarn/*
-!.yarn/releases
-!.yarn/patches
-!.yarn/plugins
-!.yarn/sdks
-!.yarn/versions
-
-# if you are NOT using Zero-installs, then:
-# comment the following lines
-!.yarn/cache
-
-# and uncomment the following lines
-# .pnp.*
-
-# End of https://www.toptal.com/developers/gitignore/api/node,yarn,macos,visualstudiocode
+# End of https://www.toptal.com/developers/gitignore/api/node,macos,visualstudiocode
