--- a/package.json
+++ b/package.json
@@ -1,21 +1,20 @@
 {
   "name": "www.sid.fyi",
-  "packageManager": "yarn@4.10.3",
   "description": "The source code for www.sid.fyi",
-  "author": {
-    "name": "Siddharth Adusumelli",
-    "email": "hi@sid.fyi",
-    "url": "https://sid.fyi"
-  },
-  "license": "MIT",
   "homepage": "https://sid.fyi",
+  "bugs": {
+    "url": "https://github.com/shift4id/www.sid.fyi/issues",
+    "email": "hi@sid.fyi"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/shift4id/www.sid.fyi.git"
   },
-  "bugs": {
-    "url": "https://github.com/shift4id/www.sid.fyi/issues",
-    "email": "hi@sid.fyi"
+  "license": "MIT",
+  "author": {
+    "name": "Siddharth Adusumelli",
+    "email": "hi@sid.fyi",
+    "url": "https://sid.fyi"
   },
   "scripts": {
     "build": "next build",
@@ -50,7 +49,9 @@
     "postcss": "^8.5.6",
     "postcss-load-config": "^6.0.1",
     "prettier": "^3.6.2",
+    "prettier-plugin-packagejson": "^2.5.19",
     "prettier-plugin-tailwindcss": "^0.7.1",
     "typescript": "^5.9.3"
-  }
+  },
+  "packageManager": "yarn@4.10.3"
 }
