--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
   },
   "dependencies": {
     "@notionhq/client": "^5.9.0",
+    "@upstash/redis": "^1.36.2",
     "@vercel/analytics": "^1.6.1",
-    "@vercel/kv": "^3.0.0",
     "@vercel/speed-insights": "^1.3.1",
     "next": "^16.1.6",
     "react": "^19.2.4",
